manifests/seaweed-filer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweed-filer
  namespace: edushare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweed-filer
  template:
    metadata:
      labels:
        app: seaweed-filer
    spec:
      containers:
        - name: seaweed-filer
          image: chrislusf/seaweedfs
          args:
            - filer
            - -master=seaweed-master:9333
            - -ip=seaweed-filer
            - -defaultReplicaPlacement=000
          ports:
            - containerPort: 8888
            - containerPort: 8111
---
apiVersion: v1
kind: Service
metadata:
  name: seaweed-filer
  namespace: edushare
spec:
  selector:
    app: seaweed-filer
  ports:
    - name: filer-api
      port: 8888
      targetPort: 8888
    - name: metrics
      port: 8111
      targetPort: 8111
