manifests/tcp-nodeports.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
  namespace: edushare
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432   # must be in range 30000-32767
---
apiVersion: v1
kind: Service
metadata:
  name: redis-nodeport
  namespace: edushare
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 30379
